test/types/string/validation/reinitFromCString.chpl
var s = "";

s = c"\xff";
